Allow MacViews to display favicons

Use the same function to retrieve favicon for web contents for MacViews
as on the other platforms, so the favicon can be displayed.

BUG=792605

Change-Id: Ide93ddb52747f86e04d09f7741af6e881d5374d6
Reviewed-on: https://chromium-review.googlesource.com/979258
Commit-Queue: Wei Li <weili@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546724}
Former-commit-id: e67dc3f09004bb560d682c6ed4026a73aec4af83